# rag-cli

./: LICENSE  TODO.md  pyproject.toml
dev_or_throaway/: idk.py  idk1.py  udk2.py
dev_or_throaway/basicRag/: Vector_database_demo_cohere,_pinecone,_llama_index.ipynb
dev_or_throaway/ragBasic/: .gitignore  config_manager.py  embedding_pipeline.py  ragAsk.py  requierments.txt  retrieval.py
src/rag_cli/: __init__.py  cli.py  documents.py  embedings.py  llms.py  retrieve.py  vector_stores.py
