[project]
name = "rag-cli"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "line-profiler>=5.0.0",
    "memory-profiler>=0.61.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "sphynx>=0.0.3",
]
